--- a/Chino Shop/nbproject/project.properties
+++ b/Chino Shop/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Chino_Shop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.substance-4.3.jar=..\\substance-4.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.substance-4.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
