--- a/Chino Shop/nbproject/project.properties
+++ b/Chino Shop/nbproject/project.properties
@@ -27,11 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/Chino_Shop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=../jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\Libreria\\jcalendar-1.4.jar
 file.reference.substance-4.3.jar=..\\substance-4.3.jar
+file.reference.substance-4.3.jar-1=..\\Libreria\\substance-4.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.substance-4.3.jar}
+    ${file.reference.substance-4.3.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.substance-4.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
