--- a/Chino Shop/nbproject/project.properties
+++ b/Chino Shop/nbproject/project.properties
@@ -37,7 +37,8 @@ javac.classpath=\
     ${file.reference.substance-4.3.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.substance-4.3.jar-1}
+    ${file.reference.substance-4.3.jar-1}:\
+    ${libs.commons-codec-1.9.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
